# rakshaka

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml
docs/: API.md
migrations/: 0001_initial.sql
src/: main.rs  state.rs
src/dto/: auth.rs  link.rs  mod.rs  public.rs  report.rs
src/handlers/: auth.rs  link.rs  public.rs  reports.rs
src/middleware/: auth.rs  role.rs
src/models/: mod.rs  report.rs  user.rs
src/routes/: auth.rs  link.rs  mod.rs  public.rs  reports.rs
src/services/: link_checker.rs
src/utils/: hash.rs  jwt.rs  mod.rs  response.rs  url.rs
