[package]
name = "rakshaka"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "macros",
  "uuid",
  "chrono"
] }

dotenvy = "0.15"

argon2 = "0.5"

jsonwebtoken = "9"

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.6", features = ["cors", "trace"] }

validator = { version = "0.20", features = ["derive"] }

url = "2"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"

tower = { version = "0.5", features = ["limit"] }
